force-app/main/default/objects/TTS_Milestone__c/TTS_Milestone__c.object-meta.xml
<CustomObject>
    <description>The Milestone object defines a task template within a Success Plan. It identifies a source date, timing offset, task subject and description, amount, and default contact. Commonly used to calculate and create due-dated tasks for Technology records.</description>
    <label>Milestone</label>
    <nameField>
        <displayFormat>MS{00000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>