force-app/main/default/objects/TTS_Milestone__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Stores a numeric amount associated with the milestone template.</description>
    <inlineHelpText>Enter the numeric amount associated with this milestone, when applicable.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>