force-app/main/default/objects/TTS_Milestone__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Selects the date field used as the basis for calculating the generated task's due date.</description>
    <inlineHelpText>Select the source date from which the task due date will be calculated.</inlineHelpText>
    <label>Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disclosure Date</fullName>
            </value>
            <value>
                <fullName>Public Disclosure Date</fullName>
            </value>
            <value>
                <fullName>Created Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>