force-app/main/default/objects/TTS_Milestone__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <description>Stores the API name of the date field referenced by the milestone's due-date calculation.</description>
    <inlineHelpText>Enter the API name of the date field used to calculate the generated task's due date.</inlineHelpText>
    <label>Date Field</label>
    <length>90</length>
    <type>Text</type>
</CustomField>