force-app/main/default/objects/TTS_Milestone__c/fields/IP_Milestone_Description__c.field-meta.xml
<CustomField>
    <fullName>IP_Milestone_Description__c</fullName>
    <description>Stores the description used for the Task generated from this milestone template.</description>
    <inlineHelpText>Enter the instructions or context that should appear in the generated task's description.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>