force-app/main/default/objects/TTS_Milestone__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>Stores the offset from the selected source date used to calculate the generated task's due date.</description>
    <inlineHelpText>Enter the offset from the source date; use When and Unit to set its direction and time unit.</inlineHelpText>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>