force-app/main/default/objects/TTS_Milestone__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Stores the subject used for the Task generated from this milestone template.</description>
    <inlineHelpText>Enter the subject that should appear on the generated task.</inlineHelpText>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>