force-app/main/default/objects/TTS_Milestone__c/fields/Success_Plans__c.field-meta.xml
<CustomField>
    <fullName>Success_Plans__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the milestone template to the Success Plan that contains it.</description>
    <inlineHelpText>Select the Success Plan that should include this milestone template.</inlineHelpText>
    <label>Success Plans</label>
    <referenceTo>TTS_Success_Plans__c</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>