force-app/main/default/objects/TTS_Milestone__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <description>Controls whether the generated task is due before, after, or on the selected source date.</description>
    <inlineHelpText>Select whether the task is due before, after, or on the source date.</inlineHelpText>
    <label>When</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>