force-app/main/default/objects/TTS_Milestone__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the default Contact linked to the Task generated from this milestone.</description>
    <inlineHelpText>Select the contact who should be linked to the generated task.</inlineHelpText>
    <label>Who</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>